# mage

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.linux  README.md
data/: README
doc/: Doxyfile  README
examples/: CMakeLists.txt
examples/enterface12/: CMakeLists.txt  osc.maxpat  testApp.cpp
examples/max/: README
examples/maxmsp/: mage~.cpp
examples/memorytest/: CMakeLists.txt  main.cpp  run-mem.sh
examples/ofAlpha/: CMakeLists.txt
examples/ofAlpha/src/: testApp.cpp
examples/ofAlphaControl/: CMakeLists.txt
examples/ofAlphaControl/src/: testApp.cpp
examples/ofOscControl/: CMakeLists.txt  mageOsc.args  osc.pd  run-enterface12.sh
examples/ofOscControl/src/: testApp.cpp  testApp.h
examples/ofPitch/: CMakeLists.txt
examples/ofPitch/src/: main.cpp
examples/ofPitchControl/: CMakeLists.txt
examples/ofPitchControl/src/: testApp.cpp  testApp.h
examples/ofSpeed/: CMakeLists.txt
examples/ofSpeed/src/: testApp.cpp
examples/ofSpeedControl/: CMakeLists.txt
examples/ofSpeedControl/src/: testApp.cpp
examples/ofStateDuration/: CMakeLists.txt
examples/ofStateDuration/src/: testApp.cpp
examples/ofStateDurationControl/: CMakeLists.txt
examples/ofStateDurationControl/src/: testApp.cpp
examples/ofVolume/: CMakeLists.txt
examples/ofVolumeControl/: CMakeLists.txt
examples/ofVolumeControl/src/: genThread.cpp  testApp.cpp
examples/of_0071_linux_release/apps/: CMakeLists.txt  README
examples/of_0071_linux_release/apps/enterface2012/: CMakeLists.txt  run-enterface12.sh
examples/of_0071_osx_release/apps/enterface12/mage2.00/: testMage~.pd
examples/of_0071_osx_release/apps/enterface12/mage2.00/src/: CMakeLists.txt  genThread.cpp  genThread.h  main.cpp  testApp.cpp  testApp.h
examples/of_0071_osx_release/apps/enterface12/mageOsc/: mageOsc.args
examples/of_0071_osx_release/apps/enterface12/mageOsc/src/: genThread.cpp  genThread.h  main.cpp  testApp.cpp  testApp.h
examples/ofxAlpha/: CMakeLists.txt
examples/ofxAlpha/src/: genThread.cpp  testApp.cpp  testApp.h
examples/ofxOSC/: run-enterface12.sh
examples/ofxOSC/src/: main.cpp  testApp.cpp
examples/ofxPitch/: CMakeLists.txt
examples/ofxPitch/src/: testApp.cpp  testApp.h
examples/ofxPitch/src/gui/: MyTestObject.h  ofxMSAInteractiveObject.h
examples/ofxSpeed/src/: testApp.cpp  testApp.h
examples/ofxStateDuration/src/: testApp.cpp  testApp.h
examples/ofxVolume/: CMakeLists.txt
examples/ofxVolume/src/: testApp.cpp  testApp.h
examples/openframeworks/: CMakeLists.txt
examples/openframeworks/src/: testApp.cpp
examples/pHTSbatch/: CMakeLists.txt  run-debug.sh
examples/pHTSbatch/src/: pHTSbatch.cpp
examples/pd/: CMakeLists.txt  makefile
examples/puredata/: CMakeLists.txt  README  mage.pd  mage~.cpp  makefile  test.pd
libs/: CMakeLists.txt
libs/gui/: MyTestObject.h  ofxMSAInteractiveObject.cpp
libs/hts_engine-1.06/: CMakeLists.txt  HTS_sstream.c  HTS_vocoder.c
libs/sptk/: CMakeLists.txt  mlsacheck-sptk.c  mlsacheck-sptk.h
magelib/: CMakeLists.txt
magelib-2.00/: CMakeLists.txt  README
magelib-2.00/libs/: CMakeLists.txt
magelib-2.00/libs/hts_engine-1.06/: CMakeLists.txt  HTS_engine.h  HTS_gstream.c  HTS_hidden.h  HTS_model.c
magelib-2.00/libs/sptk/: CMakeLists.txt  mlsacheck-sptk.c  mlsacheck-sptk.h
magelib-2.00/pd/: CMakeLists.txt  README  mage~.cpp  makefile  test.pd
magelib-2.00/src/: CMakeLists.txt  Constants.h  Distribution.h  Engine.cpp  Engine.h  Frame.h  FrameQueue.cpp  FrameQueue.h  Label.cpp  Label.h  LabelQueue.cpp  LabelQueue.h  MSDistribution.h  Math.cpp  Math.h  MathFunctions.cpp  MathFunctions.h  MemQueue.h  Model.cpp  Model.h  ModelQueue.cpp  ModelQueue.h  State.h  Vocoder.cpp  Vocoder.h  hts.cpp  hts.h  mage.cpp  mage.h
magelib/src/: CMakeLists.txt  Constants.h  FrameQueue.h  State.h  mage.h
src/: CMakeLists.txt  FrameQueue.h  Label.h  LabelQueue.cpp  LabelQueue.h  MathFunctions.cpp  MathFunctions.h  MemQueue.h  Model.h  ModelQueue.cpp  ModelQueue.h  PsolaVocoder.cpp  PsolaVocoder.h  Vocoder.cpp  Vocoder.h  hts.cpp  mage.cpp  mage.h
xcode/: README
