FILE(GLOB SRC ${SRC} *.cpp *.c)
FILE(GLOB HDR ${HDR} *.hpp *.h)

INCLUDE_DIRECTORIES(${MAGE_HTS_ENGINE_PATH})
INCLUDE_DIRECTORIES(${MAGE_PORTAUDIO_PATH})
INCLUDE_DIRECTORIES(${MAGE_SPTK_PATH})

ADD_LIBRARY(${MAGE_LIB_NAME} ${SRC} ${HDR})
TARGET_LINK_LIBRARIES(${MAGE_LIB_NAME} pthread m)
TARGET_LINK_LIBRARIES(${MAGE_LIB_NAME} ${MAGE_LIB_NAME}-htsengine)
TARGET_LINK_LIBRARIES(${MAGE_LIB_NAME} ${MAGE_LIB_NAME}-sptk)
