FILE(GLOB SRC ${SRC} *.cpp)

SET(APP_NAME memorytest)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/magelib/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/magelib/libs/hts_engine-1.06)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/magelib/libs/portaudio-0.19)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/magelib/libs/sptk)

ADD_EXECUTABLE(${APP_NAME} ${SRC} ${HDR})
TARGET_LINK_LIBRARIES(${APP_NAME} pthread m)
TARGET_LINK_LIBRARIES(${APP_NAME} mage)
#TARGET_LINK_LIBRARIES(${APP_NAME} portaudio)
#TARGET_LINK_LIBRARIES(${APP_NAME} jack)

