SET(APP_NAME pHTSbatch)

FILE(GLOB SRC ${SRC} src/*.cpp)

INCLUDE_DIRECTORIES(${MAGE_SRC_PATH})
INCLUDE_DIRECTORIES(${MAGE_HTS_ENGINE_PATH})
INCLUDE_DIRECTORIES(${MAGE_PORTAUDIO_PATH})
INCLUDE_DIRECTORIES(${MAGE_SPTK_PATH})

MESSAGE(" * building ${APP_NAME}")

ADD_EXECUTABLE(${APP_NAME} ${SRC})
TARGET_LINK_LIBRARIES(${APP_NAME} ${MAGE_LIB_NAME})
