# This is the CMakeLists.txt for mage~ the pd external for MAGE
#
# Copyright UMons - 2012
#
# @author A. Moinet

SET(SRC mage~.cpp)
SET(PD_OBJECT_NAME mage~)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DPD -O2 -funroll-loops -fomit-frame-pointer -fPIC")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPD -O2 -funroll-loops -fomit-frame-pointer -fPIC")

IF(UNIX)
	IF(NOT APPLE)
		SET(PD_OBJECT_SUFFIX ".pd_linux")
	ELSE()
		SET(PD_OBJECT_SUFFIX ".pd_darwin")
	ENDIF()
ELSE()
	SET(PD_OBJECT_SUFFIX ".dll")
ENDIF()

INCLUDE_DIRECTORIES(${MAGE_SRC_PATH})
INCLUDE_DIRECTORIES(${MAGE_HTS_ENGINE_PATH})
INCLUDE_DIRECTORIES(${MAGE_PORTAUDIO_PATH})
INCLUDE_DIRECTORIES(${MAGE_SPTK_PATH})

ADD_LIBRARY(${PD_OBJECT_NAME} SHARED ${SRC})

SET_TARGET_PROPERTIES(${PD_OBJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PD_OBJECT_NAME} PROPERTIES SUFFIX ${PD_OBJECT_SUFFIX})

TARGET_LINK_LIBRARIES(${PD_OBJECT_NAME} ${MAGE_LIB_NAME})
TARGET_LINK_LIBRARIES(${PD_OBJECT_NAME} pthread)
